fixed some responsive spacing on navbar

--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,10 @@ h2{
     width: 100%;
 }
 
-.nav-link{
+a.nav-link{
     color: white;
     background-color: white;
+    text-align: left;
 }
 
 .navbar-brand{
@@ -59,6 +60,8 @@ h2{
 
 .myName{
     margin-left: 8%;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 /* IMAGE */
@@ -85,6 +88,10 @@ img{
     width: 100%;
     border: 0 none;
     opacity: 0.8;
+  }
+
+  .nav.nav.flex-row{
+    justify-content: center;
   }
   
   .work h3 {
@@ -184,6 +191,10 @@ footer{
         width: 100%;
         height: auto;
         margin-bottom: 1em;
+    }
+    a{
+      text-align: left;
+      align-content: left;
     }
 }
 
